# ShutgunCSP

./: LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
examples/: CSP_with_element_substitution.ipynb
shotgun_csp/: __init__.py  utils.py
